1.4.0-vcli-alpha Sara

* Added a WS in the new created jobs section to pull the current console output of a job

* Modified the interactive execution methods to create a new persistent print writer

* Created a persistent print writer wrapper to store the execution console

* Created the web service that list the status of the jobs run in the cluster so far

* Added to query and mechanics to manage job statuses

* Written the basic queries and mechanics to have a persistent log and console

* Started creating the base infrastructure for the service.

* Refactored the coordinator backend adapter to reflect the coordinator nature of it.

* Added the html auxiliar facade that allows top upload and execute a repository

* Added a new execute service that accepts a post of 'repository' and runs all the flows in the 
  contained repository. It also tries to add missing components from the user repository if needed.
  
* Services to expose cluster information
	- Added log service that listed the log information
	- Added status service that listed the server's status information
	- Added info service that listed the servers' information
	- Added properties service that listed the properties of the server's 

* Modfyied the MDX to return the log entries (had to specialize the insert status to make Derby happy)

* Creates an auxiliar service that just display forms for 
	- Adding to a repository
	- Create a user 
	- Roles map for granting and revoking

* Added simple forms for search and the like

* Created the proper XSLT transformation for all the services that do not require complex for forms

* Created a first XSLT for /services/location/list.html

* Created the basic mechaniscs for returning HTML pages based on XML and XSLTs

* Modified the MDX connection duplications (Derby can support multiple concurrent
  connections to the DB, as long as they are in the same JVM). This gets rid of the
  results problem reading and the obscure message for autocommit off.
